# Island

./: .deepsource.toml  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_cpdev0.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0955ea374aa2_add_default_mascot_users.py  0c31afdd0aac_added_is_safe_column_to_worlds.py  131ac4979519_add_avatar_and_timestamp_columns.py  283cbb3e3b4d_web_service_migration.py  3b4299d686e9_added_ban.py  43fd37ea465e_add_lang_approval_to_users.py  522958959b6d_base_data_migration.py  550cd8606bd1_base_migration.py  57e919a1bb46_added_email_column.py  78624ea61cdb_add_ban_user_and_world_tables.py  7af4dca5211f_remove_unused_tables.py  7ec95167f6de_added_grant_scopes_column.py  8d2ffe323281_make_scores_an_array_column.py  93ef17250727_added_scopes.py  978186290230_added_world_table.py  accb33fc9aee_add_url_column_to_world_table.py  baf1add0a253_make_parent_ids_gift_id_nullable.py  bb203b95fe89_move_earnable_by_client_to_stamps.py  cc164b5ba38a_add_user_id_offset.py  f65e128467b5_add_spawn_column_to_rooms_table.py
api/core/: config.py  events.py  logging.py
api/database/: __init__.py
config/locale/: en.yml  es.yml
data/: cards.sql  furniture_items.sql  games.sql  igloo_floors.sql  igloo_locations.sql  igloos.sql  items.sql  jokes.sql  mascots.sql  options.sql  polaroids.sql  postcards.sql  puffle_items.sql  puffles.sql  rooms.sql  stamps.sql  tour_messages.sql
island/core/: config.py  events.py  i18n.py  lifespan.py  logging.py
island/database/: __init__.py
island/entities/: __init__.py  avatar.py  room.py  world.py
island/events/: __init__.py  i18n.py  world.py
island/handlers/: __init__.py  player.py  room.py
island/middlwares/: graphql.py  world.py
island/models/: __init__.py  action.py  avatar.py  create.py  error.py  membership.py  packet.py  player.py  presence.py  relationship.py  token.py  user.py  world.py
island/routes/: __init__.py  auth.py  avatars.py  friends.py  users.py  web_service.py  worlds.py
island/utils/: auth.py  encryption.py  recaptcha.py  routes.py
web_service/: images.json  markup.json
web_service/de/: cards.json  characters.json  chunking_map.json  cover.json  furniture_items.json  game_strings.json  games.json  igloo_floors.json  igloo_locations.json  igloos.json  jokes.json  lands.json  mascot_messages.json  mascots.json  newspapers.json  paper_items.json  paths.json  polaroids.json  postcards.json  puffle_items.json  puffles.json  puffles_v2.json  rooms.json  safe_chat_messages.json  stage_script_messages.json  stamps.json  stamps_tokenized.json  text.json  tour_guide_messages.json  worlds.json
web_service/en/: cards.json  characters.json  chunking_map.json  cover.json  furniture_items.json  game_strings.json  games.json  igloo_floors.json  igloo_locations.json  igloos.json  jokes.json  mascot_messages.json  mascots.json  newspapers.json  paper_items.json  paths.json  polaroids.json  postcards.json  puffle_items.json  puffles.json  puffles_v2.json  rooms.json  safe_chat_messages.json  stage_script_messages.json  stamps.json  stamps_tokenized.json  text.json  tour_guide_messages.json  worlds.json
web_service/es/: characters.json  chunking_map.json  cover.json  furniture_items.json  game_strings.json  games.json  igloo_floors.json  igloo_locations.json  igloos.json  jokes.json  mascot_messages.json  mascots.json  paths.json  (+13 more)
(+149 files in other folders)
