[tool.poetry]
name = "island"
version = "1.0.0"
description = "Server backend for ClubPenguin"
authors = ["dote", "dan", "ro"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.0"
loguru = "^0.7.2"
uvicorn = "^0.30.6"
python-multipart = "^0.0.9"
sqlalchemy-citext = "^1.8.0"
alembic = "^1.13.2"
sentry-sdk = {extras = ["loguru"], version = "^1.25.1"}
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
redis = "^5.0.8"
fastapi-events = "^0.12.0"
starlette-context = "^0.3.6"
pydantic = {extras = ["email"], version = "^2.9.0"}
httpx = "^0.27.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.34"}
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
alembic-postgresql-enum = "^1.3.0"
i18nice = {extras = ["yaml"], version = "^0.15.5"}
cryptography = "^43.0.1"
pynacl = "^1.5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | venv
  | \.venv
  | env
  | config
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black" 